# Final-Project

./: Humidity.html  Temperatures in Canadian Cities.html  data.json  main.py  pyproject.toml  windspeed.html
